euphony-dsp/src/snapshots/euphony_dsp__delay__Feedback.snap
---
source: euphony-dsp/src/delay.rs
expression: node
---
Node {
    name: "Feedback",
    module: [
        "delay",
    ],
    impl_path: "euphony_dsp::delay",
    id: 251,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "delay",
            id: 1,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "decay",
            id: 2,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: "",
}
