euphony-dsp/src/snapshots/euphony_dsp__delay__Read.snap
---
source: euphony-dsp/src/delay.rs
expression: node
---
Node {
    name: "Read",
    module: [
        "delay",
    ],
    impl_path: "euphony_dsp::delay",
    id: 251,
    inputs: [],
    buffers: [],
    docs: "",
}
