euphony-dsp/src/snapshots/euphony_dsp__delay__Write.snap
---
source: euphony-dsp/src/delay.rs
expression: node
---
Node {
    name: "Write",
    module: [
        "delay",
    ],
    impl_path: "euphony_dsp::delay",
    id: 250,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "delay",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: "",
}
